@@ -364,6 +364,7 @@ extern struct Battle_Config {
 	unsigned short min_skill_delay_limit;
 	unsigned short default_skill_delay;
 	unsigned short no_skill_delay;
+	unsigned short attack_walk_delay;
 	unsigned short require_glory_guild;
 	unsigned short idle_no_share;
 	unsigned short party_update_interval;
